Basic pwa setup

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -1,5 +1,10 @@
 <!--
   ~ SPDX-License-Identifier: MIT
+  ~ Copyright (c) 2023-2025 Noodle-Bytes. All Rights Reserved
+  -->
+
+<!--
+  ~ SPDX-License-Identifier: MIT
   ~ Copyright (c) 2023-2024 Vypercore. All Rights Reserved
   -->
 
@@ -9,6 +14,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <meta name="description" content="Buckets of coverage">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180">
+    <link rel="mask-icon" href="/maskable-icon-512x512.png" color="#FFFFFF">
+
   </head>
   <body>
     <div id="root"></div>
