Add load button

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -13,7 +13,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Bucket Viewer</title>
     <meta name="description" content="Buckets of coverage">
     <meta name="theme-color" content="#ffffff">
     <link rel="icon" href="/favicon.ico">
